# shifts

./: .gitignore  .pre-commit-config.yaml  README.md  generate_configs.sh  pyproject.toml
ssa/: main.py  submission.py  transforms.py
ssa/configs/: configen.yaml  main.yaml
ssa/configs/data/: base.yaml  weather.yaml
ssa/configs/exp/: base.yaml  unit_test.yaml
ssa/configs/model/: base.yaml  due.yaml  due_test.yaml  simple.yaml
ssa/configs/trainer/: base.yaml  unit_test.yaml
ssa/hydra/pytorch_lightning/trainer/: configs.py
ssa/hydra/ssa/models/: configs.py
ssa/hydra/ssa/weather/data/: configs.py
ssa/models/: __init__.py  base_model.py
ssa/models/basic/: __init__.py  lightning.py
ssa/models/due/: __init__.py  dkl.py  fc_resnet.py  lightning.py
ssa/models/due/layers/: __init__.py  batchnorm.py  spectral_norm.py
ssa/models/saint/: layers.py  lightning.py  tab_mlp.py  tab_transformer.py
ssa/motion/: run.py
ssa/motion/sdc/: __init__.py  analyze_metadata.py  assessment.py  cache_metadata.py  config.py  constants.py  dataset.py  filters.py  metrics.py  trainer.py
ssa/motion/sdc/oatomobile/: types.py
ssa/motion/sdc/oatomobile/tf/: loggers.py  types.py
ssa/motion/sdc/oatomobile/torch/: loggers.py  savers.py  transforms.py  types.py  utils.py
ssa/motion/sdc/oatomobile/torch/baselines/: __init__.py  batch_preprocessing.py  behavioral_cloning.py  deep_imitative_model.py  robust_imitative_planning.py
ssa/motion/sdc/oatomobile/torch/networks/: __init__.py  mlp.py  perception.py  sequence.py
ssa/motion/sdc/oatomobile/utils/: uuid.py
ssa/motion/sdc/oatomobile/utils/loggers/: __init__.py  base.py  csv.py  terminal.py  wandb.py
ssa/motion/ysdc_dataset_api/dataset/: dataset.py
ssa/motion/ysdc_dataset_api/evaluation/: metrics.py  utils.py
ssa/motion/ysdc_dataset_api/features/: producing.py  rendering.py
ssa/motion/ysdc_dataset_api/proto/: dataset_pb2.py  geom_pb2.py  map_pb2.py  submission_pb2.py  tags_pb2.py
ssa/motion/ysdc_dataset_api/tests/: metrics_test.py  renderer_test.py
ssa/motion/ysdc_dataset_api/utils/: filtration.py  map.py  reading.py  serialization.py  tracks.py  transform.py
ssa/weather/: assessment.py  uncertainty.py
ssa/weather/data/: datamodule.py  dataset.py
tests/: benchmark_test.py  datamodules_test.py  evaluation_test.py  run_test.py
